<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newBillLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:clickable="true">


    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Add new Bill"
        android:textSize="46dp"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/billTitle"
        style="@style/TitleTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/billTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/DescriptionTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/billTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/billDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="3"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/deadline_label"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_input_layout">
    </TextView>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="Mon, 29.11.2019"
        android:textColor="@color/pickerColor"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/date_label"
        app:layout_constraintLeft_toRightOf="@+id/date_label">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_input_layout"
        style="@style/EditableTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:hint="@string/amount_hint"
        android:minWidth="500dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintLeft_toRightOf="@+id/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/billAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/advanced_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/advanced_section"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_label">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advanced_section">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="11dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/remind_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_label"
                android:textSize="18sp">
            </TextView>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/remind_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown">
            </androidx.appcompat.widget.AppCompatSpinner>

            <TextView
                android:id="@+id/hour_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_label"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="10:00"
                android:textColor="@color/pickerColor">
            </TextView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_add_new_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Add new bill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>

    <Button
        android:id="@+id/button_cancel_new_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_add_new_bill">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>